--- a/Cadres/app/src/main/res/layout/activity_gb_drawer_right_list.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer_right_list.xml
@@ -133,7 +133,7 @@
         android:id="@+id/tv_ndkc_title"
         android:layout_width="@dimen/dp_80"
         android:gravity="center"
-        android:text="年度\n考察\n结果"
+        android:text="年度\n考核\n结果"
         android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
@@ -148,7 +148,7 @@
         android:layout_width="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_ndkc"
         app:layout_constraintEnd_toEndOf="@+id/view_ndkc"
-        tools:text="年度\n考察\n结果"
+        tools:text="年度\n考核\n结果"
         android:minHeight="@dimen/dp_120"
         android:textSize="@dimen/sp_12"
         android:gravity="center_vertical"
