--- a/Cadres/app/src/main/res/layout/activity_bm_drawer_end.xml
+++ b/Cadres/app/src/main/res/layout/activity_bm_drawer_end.xml
@@ -7,17 +7,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_dw_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="@dimen/sp_24"
-        android:layout_marginTop="@dimen/dp_30"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="标题"/>
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
         android:layout_width="wrap_content"
@@ -39,6 +28,17 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="@dimen/dp_30" />
 
+    <TextView
+        android:id="@+id/tv_dw_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
+        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/dp_30"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题标题"/>
+
 
     <TextView
         android:id="@+id/tv_dr_dwjb"
@@ -46,13 +46,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dw_title"
-        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginTop="@dimen/dp_30"
+        android:textSize="@dimen/sp_14"
         android:text="单位级别："/>
 
     <TextView
         android:id="@+id/tv_dr_dwjb2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_dwjb"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_dwjb"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_dwjb2"
+        android:textSize="@dimen/sp_14"
         android:layout_marginTop="@dimen/dp_30"
         android:text="单位类别："/>
 
@@ -73,6 +76,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_dwxz"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_dwxz"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
         tools:text="单位性质单位性质单位性质单位性质单位性质单位性质："/>
 
@@ -80,6 +84,7 @@
         android:id="@+id/tv_dr_hdzs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_dwxz2"
         android:layout_marginTop="@dimen/dp_30"
@@ -91,6 +96,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_hdzs"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_hdzs"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
         tools:text="单位性质单位性质单位性质单位性质单位性质单位性质："/>
 
@@ -98,6 +104,7 @@
         android:id="@+id/tv_dr_sjpb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_hdzs2"
         android:layout_marginTop="@dimen/dp_30"
@@ -107,6 +114,7 @@
         android:id="@+id/tv_dr_sjpb2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_sjpb"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_sjpb"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
@@ -116,6 +124,7 @@
         android:id="@+id/tv_dr_cpqk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_sjpb2"
         android:layout_marginTop="@dimen/dp_30"
@@ -128,12 +137,14 @@
         app:layout_constraintStart_toEndOf="@+id/tv_dr_cpqk"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_cpqk"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+        android:textSize="@dimen/sp_14"
         tools:text="单位性质单位性质单位性质单位性质单位性质单位性质："/>
 
     <TextView
         android:id="@+id/tv_dr_kqqk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_cpqk2"
         android:layout_marginTop="@dimen/dp_30"
@@ -145,6 +156,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_kqqk"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_kqqk"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
         tools:text="单位性质单位性质单位性质单位性质单位性质单位性质："/>
 
@@ -152,6 +164,7 @@
         android:id="@+id/tv_dr_cz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
         app:layout_constraintTop_toBottomOf="@+id/tv_dr_kqqk2"
         android:layout_marginTop="@dimen/dp_30"
@@ -161,6 +174,7 @@
         android:id="@+id/tv_dr_cz2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
         app:layout_constraintStart_toEndOf="@+id/tv_dr_cz"
         app:layout_constraintTop_toTopOf="@+id/tv_dr_cz"
         app:layout_constraintEnd_toEndOf="@+id/guideline_end"
