--- a/Cadres/app/src/main/res/layout/activity_gb_drawer_right_bm.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer_right_bm.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="@dimen/dp_30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_right_btn"
         tools:text="sssssssssssssss" />
