--- a/Cadres/app/src/main/res/layout/fragment_yjjc_cadre2.xml
+++ b/Cadres/app/src/main/res/layout/fragment_yjjc_cadre2.xml
@@ -94,6 +94,7 @@
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:textSize="@dimen/sp_12"
                 android:paddingStart="@dimen/dp_3"
                 android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_tip2"
@@ -115,6 +116,7 @@
                 android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:gravity="center"
+                android:textSize="@dimen/sp_12"
                 android:paddingStart="@dimen/dp_3"
                 android:paddingEnd="@dimen/dp_3"
                 app:layout_constraintStart_toEndOf="@+id/tv_xh"
@@ -133,11 +135,12 @@
 
             <TextView
                 android:id="@+id/tv_xrzw"
-                android:layout_width="@dimen/dp_120"
+                android:layout_width="@dimen/dp_160"
                 android:layout_height="0dp"
                 android:paddingStart="@dimen/dp_3"
                 android:paddingEnd="@dimen/dp_3"
                 android:gravity="center"
+                android:textSize="@dimen/sp_12"
                 app:layout_constraintStart_toEndOf="@+id/tv_name"
                 app:layout_constraintTop_toTopOf="@+id/view_title_left"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title_left"
@@ -154,10 +157,11 @@
 
             <TextView
                 android:id="@+id/tv_nrmzw"
-                android:layout_width="@dimen/dp_120"
+                android:layout_width="@dimen/dp_160"
                 android:layout_height="0dp"
                 android:paddingStart="@dimen/dp_3"
                 android:paddingEnd="@dimen/dp_3"
+                android:textSize="@dimen/sp_12"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
                 app:layout_constraintTop_toTopOf="@+id/view_title_left"
@@ -219,6 +223,7 @@
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toStartOf="@+id/view_title"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -239,6 +244,7 @@
                     android:layout_width="@dimen/dp_60"
                     android:layout_height="0dp"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_sex"
@@ -261,6 +267,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_mz"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -281,6 +288,7 @@
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_jg"
@@ -301,6 +309,7 @@
                     android:id="@+id/tv_qrzxl"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
@@ -324,6 +333,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_qrzxl"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -346,6 +356,7 @@
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -366,6 +377,7 @@
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
@@ -387,6 +399,7 @@
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_zzxw"
@@ -407,6 +420,7 @@
                     android:id="@+id/tv_zyjszw"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
@@ -428,6 +442,7 @@
                     android:id="@+id/tv_csny"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="0dp"
+                    android:textSize="@dimen/sp_12"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
@@ -451,6 +466,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_csny"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -472,6 +488,7 @@
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:layout_height="0dp"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_gzsj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -492,6 +509,7 @@
                     android:layout_width="@dimen/dp_80"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:layout_height="0dp"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
@@ -514,6 +532,7 @@
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_rxzsj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -536,6 +555,7 @@
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintBottom_toTopOf="@+id/tv_thdytj_yxp"
@@ -557,6 +577,7 @@
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
                     app:layout_constraintTop_toBottomOf="@+id/tv_thdytj"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -579,6 +600,7 @@
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toEndOf="@+id/tv_thdytj_yxp"
                     app:layout_constraintTop_toBottomOf="@+id/tv_thdytj"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -599,6 +621,7 @@
                     android:layout_height="0dp"
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_thdytj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -620,6 +643,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_thdytj"
                     app:layout_constraintTop_toBottomOf="@+id/tv_hytj"
@@ -640,6 +664,7 @@
                     android:layout_width="@dimen/dp_60"
                     android:layout_height="0dp"
                     android:gravity="center"
+                    android:textSize="@dimen/sp_12"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
                     app:layout_constraintStart_toEndOf="@+id/tv_hytj_yxp"
@@ -663,6 +688,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_hytj_dps"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -683,6 +709,7 @@
                     android:layout_width="@dimen/dp_80"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:layout_height="0dp"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_jwyj"
@@ -714,6 +741,7 @@
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintBottom_toTopOf="@+id/tv_cwhyj_yxp"
@@ -733,6 +761,7 @@
                     android:layout_width="@dimen/dp_60"
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:paddingEnd="@dimen/dp_3"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
@@ -754,6 +783,7 @@
                     android:layout_width="@dimen/dp_60"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:layout_height="0dp"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_yxp"
@@ -776,6 +806,7 @@
                     android:layout_height="0dp"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     android:gravity="center"
                     app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_dps"
                     app:layout_constraintTop_toBottomOf="@+id/tv_cwhyj"
@@ -799,6 +830,7 @@
                     android:gravity="center"
                     android:paddingStart="@dimen/dp_3"
                     android:paddingEnd="@dimen/dp_3"
+                    android:textSize="@dimen/sp_12"
                     app:layout_constraintStart_toEndOf="@+id/tv_cwhyj"
                     app:layout_constraintTop_toTopOf="@+id/view_title"
                     app:layout_constraintBottom_toBottomOf="@+id/view_title"
