--- a/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_cadre.xml
@@ -20,6 +20,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -41,6 +42,7 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_sex"
@@ -62,6 +64,7 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_mz"
@@ -84,6 +87,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jg"
@@ -107,6 +111,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_zzxl"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -125,6 +130,7 @@
         android:id="@+id/tv_zzzy"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
@@ -148,6 +154,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzzy"
@@ -169,6 +176,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
@@ -188,6 +196,7 @@
     <TextView
         android:id="@+id/tv_qrzxw"
         android:layout_width="@dimen/dp_80"
+        android:textSize="@dimen/sp_12"
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
@@ -212,6 +221,7 @@
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzxw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -233,6 +243,7 @@
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zyjszw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -254,6 +265,7 @@
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -275,6 +287,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_gzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -296,6 +309,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -317,6 +331,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rxzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -338,6 +353,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rxzjsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -360,6 +376,7 @@
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_thdytj_yxp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
@@ -379,6 +396,7 @@
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_thdytj_dps"
@@ -399,6 +417,7 @@
         android:id="@+id/tv_hytj_dps"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
@@ -421,6 +440,7 @@
         android:id="@+id/tv_jwyj"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
@@ -444,6 +464,7 @@
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jwyj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -473,6 +494,7 @@
         android:layout_height="0dp"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzbyj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -494,6 +516,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_yxp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -513,6 +536,7 @@
         android:id="@+id/tv_cwhyj_jg"
         android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
@@ -538,6 +562,7 @@
         android:gravity="center"
         android:paddingStart="@dimen/dp_5"
         android:paddingEnd="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_cwhyj_jg"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
