--- a/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
+++ b/Cadres/app/src/main/res/layout/item_yjjc_vote.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,9 +28,10 @@
 
     <TextView
         android:id="@+id/tv_xrzw"
-        android:layout_width="@dimen/dp_160"
+        android:layout_width="@dimen/dp_180"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/dp_5"
+        android:textSize="@dimen/sp_12"
         android:paddingEnd="@dimen/dp_5"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
@@ -49,9 +51,10 @@
 
     <TextView
         android:id="@+id/tv_xrzsj"
-        android:layout_width="@dimen/dp_160"
+        android:layout_width="@dimen/dp_120"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,9 +71,10 @@
 
     <TextView
         android:id="@+id/tv_nmtmzw"
-        android:layout_width="@dimen/dp_160"
+        android:layout_width="@dimen/dp_180"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingStart="@dimen/dp_5"
@@ -113,6 +117,7 @@
         app:layout_constraintEnd_toStartOf="@+id/tv_bty"
         app:layout_constraintTop_toTopOf="@+id/view_tpjg"
         app:layout_constraintBottom_toBottomOf="@+id/view_tpjg"
+        android:textSize="@dimen/sp_12"
         android:layout_width="@dimen/dp_110"
         android:background="@drawable/shape_eb8b49_r40"
         android:gravity="center"
@@ -127,6 +132,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_tpjg"
         app:layout_constraintEnd_toStartOf="@+id/tv_qq"
         android:layout_width="@dimen/dp_110"
+        android:textSize="@dimen/sp_12"
         android:background="@drawable/shape_eb8b49_r40"
         android:gravity="center"
         android:textColor="@color/white"
@@ -140,6 +146,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view_tpjg"
         app:layout_constraintEnd_toEndOf="@+id/view_tpjg"
         android:layout_width="@dimen/dp_110"
+        android:textSize="@dimen/sp_12"
         android:background="@drawable/shape_eb8b49_r40"
         android:gravity="center"
         android:textColor="@color/white"
@@ -150,6 +157,7 @@
         android:id="@+id/tv_tpjg"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
         android:visibility="gone"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="@+id/view_tpjg"
