--- a/Cadres/app/src/main/res/layout/title_layout.xml
+++ b/Cadres/app/src/main/res/layout/title_layout.xml
@@ -7,14 +7,52 @@
     android:background="@color/color_bd1b21"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/left_iv"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_40"
-        android:layout_centerVertical="true"
-        android:src="@mipmap/ic_back"
-        android:visibility="gone"
-        tools:visibility="visible" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/left_iv"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_back"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        <LinearLayout
+            android:id="@+id/ll_left1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_40"
+            android:gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/left_iv1"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_30"
+                android:src="@mipmap/ic_switch" />
+
+            <TextView
+                android:id="@+id/left_tv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginStart="@dimen/dp_10"
+                android:text="切换至会议模式" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
